--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "prettier": "^2.2.0",
     "react-docgen-typescript-loader": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "style-loader": "^2.0.0",
+    "svg-url-loader": "^6.0.0",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.1.2",
@@ -57,7 +59,6 @@
     "@reduxjs/toolkit": "^1.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-images-upload": "^1.2.8",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
