--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-js-starter-gayrat",
+  "name": "react-image-upload",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
